# PYWEB-HW10

./: dev-docker-compose.yaml  pyproject.toml
quotes/quotes/: settings.py
quotes/quotesapp/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
quotes/quotesapp/migrations/: 0001_initial.py  0002_alter_tag_name.py
quotes/quotesapp/static/: style.css
quotes/quotesapp/templates/: add_author.html  add_quote.html  add_tag.html  author_info.html  base.html  index.html  index_mongo.html  tag_info.html
quotes/quotesapp/templatetags/: extract.py
quotes/users/: forms.py  urls.py  views.py
quotes/users/templates/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html
quotes/utils/: add_quotes_to_mongo.py  migration.py
