[tool.poetry]
name = "pyweb-hw10"
version = "0.1.0"
description = ""
authors = ["shuguruiua <popov.yk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
psycopg2-binary = "^2.9.9"
pymongo = "^4.6.2"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
